<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.db4j</groupId>
    <artifactId>kilim</artifactId>
    <version>2.0.0-13</version>
    <packaging>maven-plugin</packaging>
    <dependencies>
        <!-- build.xml:fail-libs must be kept in sync with changes to this list -->
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-debug-all</artifactId>
            <version>6.0_ALPHA</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.conversantmedia/disruptor -->
        <dependency>
            <groupId>com.conversantmedia</groupId>
            <artifactId>disruptor</artifactId>
            <version>1.2.10</version>
        </dependency>


    </dependencies>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <mailingLists>
        <mailingList>
            <archive>https://groups.google.com/forum/#!forum/kilimthreads</archive>
        </mailingList>
    </mailingLists>
    <scm>
        <connection>scm:git:git@github.com:nqzero/kilim.git</connection>
        <developerConnection>scm:git:git@github.com:nqzero/kilim.git</developerConnection>
        <url>git@github.com:nqzero/kilim.git</url>
        <tag>master</tag>
    </scm>
    <name>kilim</name>
    <description>Coroutines, continuations, fibers, actors and message passing for the JVM</description>
    <url>https://github.com/nqzero/kilim</url>
    <developers>
        <developer>
            <name>nqzero</name>
            <email>srl.public@nqzero.com</email>
            <organization>nqzero</organization>
            <organizationUrl>https://github.com/nqzero</organizationUrl>
        </developer>
    </developers>
    <build>
        <plugins>

            <!-- the primary env is ant, tests are disabled in mvn as they don't fit the lifecycle-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12.4</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
        </plugins>
        <sourceDirectory>src</sourceDirectory>
        <testSourceDirectory>test</testSourceDirectory>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>

    </properties>


</project>
